<resources>
	<string name="pokepedia">Poképedia</string>
	<string name="pokedex">Pokédex</string>
	<string name="search_for_pok_mon_by_name_or_using_the_national_pok_dex_number">Search for Pokémon by name or using the National Pokédex number.</string>
	<string name="gotta_know_em_all">Gotta know \'em all</string>
	<string name="retry">Retry</string>
	<string name="what_pokemon_are_you_looking_for">What Pokémon are you looking for?</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="about">About</string>
	<string name="stats">Stats</string>
	<string name="evolution">Evolution</string>
	<string name="pokedex_data">Pokédex Data</string>
	<string name="species">Species</string>
	<string name="height">Height</string>
	<string name="weight">Weight</string>
	<string name="abilities">Abilities</string>
	<string name="training">Training</string>
	<string name="catch_rate">Catch Rate</string>
	<string name="base_friendship">Base Friendship</string>
	<string name="growth_rate">Growth Rate</string>
	<string name="breeding">Breeding</string>
	<string name="gender">Gender</string>
	<string name="egg_cycles">Egg Cycles</string>
	<string name="habitat">Habitat</string>
	<string name="base_exp">Base Exp</string>
	<string name="base_stats">Base Stats</string>
	<string name="egg_groups">Egg Groups</string>
</resources>